Autoscroll down functionality added. Traces in several colors included.
It still gets stucked at the beginning. My guess
is that is due to the semaphores. It'll probably
be wise to get rid of them.

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -60,4 +60,14 @@
         android:onClick="onClickClose"
         android:text="Close" />
 
+    <Button
+        android:id="@+id/btClear"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/tvRead"
+        android:layout_toRightOf="@+id/btClose"
+        android:onClick="onClickClear"
+        android:text="Clear" />
+    
+    
 </RelativeLayout>
